[package]
name = "wv"
version = "0.1.0"
edition = "2021"
description = "Webview raw ffi bindings"
repository = "https://github.com/MoAlyousef/wv"
documentation = "https://docs.rs/wv"
categories = ["gui"]
readme = "README.md"
license = "MIT"

[dependencies]
wv-sys = { version = "0.1.3", path = "wv-sys" }