[package]
name = "wv"
version = "0.1.1"
edition = "2021"
description = "Webview raw ffi bindings"
repository = "https://github.com/MoAlyousef/wv"
documentation = "https://docs.rs/wv"
categories = ["gui"]
readme = "README.md"
license = "MIT"

[dependencies]
wv-sys = { version = "0.1.4", path = "wv-sys" }