[package]
name = "wv-sys"
version = "0.2.1"
edition = "2021"
description = "Webview raw ffi bindings"
repository = "https://github.com/MoAlyousef/wv"
documentation = "https://docs.rs/wv-sys"
categories = ["gui"]
readme = "README.md"
license = "MIT"

[build-dependencies]
pkg-config = "0.3"
cmake = "0.1"